--- a/index.html
+++ b/index.html
@@ -6,31 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h3><i>What is Lorem Ipsum?</i></h3>
-    <hr>
+    <h2><del>What is Lorem Ipsum?</del></h2>
+    <img src="BB.png" width="238.5px" height="185px">
     <p>
-        <i>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown <br>
-            printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining <br>
-            essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software <br>
-            like Aldus PageMaker including versions of Lorem Ipsum.
-        </i>
-    </p>
-    <br>
-    <br>
-    <h3><u>What is Lorem Ipsum?</u></h3>
-    <hr>
-    <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown <br>
-        printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining <br>
-        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software <br>
-        like Aldus PageMaker including versions of Lorem Ipsum.<br>
-        <br>
-        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look <br>
-        even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum <br>
-        generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, <br>
-        combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, <br>
-        injected humour, or non-characteristic words etc.
+        <b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown <br>
+        <i>printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining <br>
+        essentially unchanged. It was popularised in the <u><mark>1960s</mark></u> with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software <br>
+        like Aldus PageMaker including versions of</i> <b>Lorem Ipsum.</b>
+        <br><br>
+        <b>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't <br>
+        look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. <q>All the <br>
+        Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet</q>. It uses a dictionary of over 200 <br>
+        Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. <cite>The generated Lorem Ipsum is therefore always free <br>
+        from repetition, injected humour, or non-characteristic words etc.</cite></b>
     </p>
 
 </body>
