--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h2><del>What is Lorem Ipsum?</del></h2>
-    <img src="BB.png" width="238.5px" height="185px">
+    <h2>iPhone 15 Pro | Titanium | Apple</h2>
+    <video src="iPhone 15 Pro _ Titanium _ Apple.mp4" controls width="490px" height="300px"></video>
     <p>
-        <b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown <br>
-        <i>printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining <br>
-        essentially unchanged. It was popularised in the <u><mark>1960s</mark></u> with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software <br>
-        like Aldus PageMaker including versions of</i> <b>Lorem Ipsum.</b>
-        <br><br>
-        <b>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't <br>
-        look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. <q>All the <br>
-        Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet</q>. It uses a dictionary of over 200 <br>
-        Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. <cite>The generated Lorem Ipsum is therefore always free <br>
-        from repetition, injected humour, or non-characteristic words etc.</cite></b>
+        Might meets light. Introducing the new titanium <b>iPhone 15 Pro.</b> Featuring a <br>
+        whole new level of gaming performance with the <b>A17 Pro chip.</b> A more <br>
+        versatile, more advanced Pro camera system. And an aerospace-grade <br>
+        titanium design. <b>iPhone 15 Pro</b> and <b>iPhone 15 Pro Max</b> are our lightest, most <br>
+        <i>powerful</i> Pro models ever.
     </p>
-
+    <img src="iphone.jpeg" width="490px" height="219px">
+    <p>
+        <b>
+        Here you’ll find news about product launches, tutorials, and other great <br>
+        content. Apple’s more than <u>160,000</u> employees are dedicated to making <br>
+        the best products on earth, and to leaving the world better than we found <br>
+        it.
+        </b>
+    </p>
 </body>
 </html>
