--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ჩემი საიტი</title>
 </head>
 <body>
-    <h2>iPhone 15 Pro | Titanium | Apple</h2>
-    <video src="iPhone 15 Pro _ Titanium _ Apple.mp4" controls width="490px" height="300px"></video>
-    <p>
-        Might meets light. Introducing the new titanium <b>iPhone 15 Pro.</b> Featuring a <br>
-        whole new level of gaming performance with the <b>A17 Pro chip.</b> A more <br>
-        versatile, more advanced Pro camera system. And an aerospace-grade <br>
-        titanium design. <b>iPhone 15 Pro</b> and <b>iPhone 15 Pro Max</b> are our lightest, most <br>
-        <i>powerful</i> Pro models ever.
-    </p>
-    <img src="iphone.jpeg" width="490px" height="219px">
-    <p>
-        <b>
-        Here you’ll find news about product launches, tutorials, and other great <br>
-        content. Apple’s more than <u>160,000</u> employees are dedicated to making <br>
-        the best products on earth, and to leaving the world better than we found <br>
-        it.
-        </b>
-    </p>
+    <section>
+        <article>
+            <h2>What is Lorem Ipsum?</h2>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when <br>
+                an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <h2>Why do we use it?</h2>
+            <p>
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+            </p>
+            <h2>Where does it come from?</h2>
+            <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+            </p>
+            <h2>Where can I get some?</h2>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when <br>
+                an unknown printer took a galley of type and scrambled it to make a type specimen book.  
+            </p>
+        </article>
+    </section>
 </body>
 </html>
