--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
 </head>
 <body>
     <div class="box">
-        <h3>Eminem’s Song Used in Call of Duty Trailer Again</h3>
-        <p>
-            The song’s relentless beat remastered for this <br>
-            video carries impressive visuals from a new <br>
-            game. Strictly speaking, it’s a pack of old <br>
-            upgraded maps for a new multiplayer platform, <br>
-            but the gameplay looks promising
-        </p>
-        <img class="img" src="person.jpeg">
-        <br>
-        <a href="google.com">Download</a>
+        <h2>Hello world</h2> 
     </div> 
 </body>
 </html>
