--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>ჩემი საიტი</title>
 </head>
 <body>
-    <div class="box">
-        <h2>Hello world</h2> 
-    </div> 
+   <div class="container">
+        <div class="square"></div>
+   </div>
 </body>
 </html>
